# mina-re

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
mina_re/: item_to_rename.py  main.py  rename.py  utils.py
rename_mina/: item_to_rename.py  main.py  utils.py
tests/: test_item_to_rename.py  test_rename.py  test_utils.py
