[tool.poetry]
name = "rename-mina"
version = "0.1.0"
description = "Renaming tool."
authors = ["yawn <102347321+yawn77@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yawn77/rename-mina"
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
packages = [{include = "rename_mina"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
mypy = "^0.991"
tox = "^3.27.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
